# shotgun-terminal

./: .gitignore  CLAUDE.md  README.md  prompt-architect-shotgun.md  prompt-dev-shotgun.md  prompt-find-bug-shotgun.md  pyproject.toml  reinstall.bat  requirements.txt  setup.py  shotgun_context_dev.txt
shotgun_terminal/: __init__.py  cli.py  config.py  context_generator.py  file_selector.py  gemini_service.py  prompts.py  settings.py  translator.py  tree_generator.py  tree_selector.py  user_input.py
shotgun_terminal.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
